      substate of starting after a failed job start (backported from 5.1.1).
  b - TRQ-3110. Handle slot limits correctly when jobs are preempted.
      (backported from 5.1.1)
  e - TRQ-3095. Add the server setting disable_automatic_requeue to stop jobs from being
      requeued if they experience a transient failure on the mom. (backported from 5.1.1)
 

5.0.1.h2
  b - Reverted a change in 5.0.0 which made it so a user could not submit a
      job from a node which had been allowed using the acl_hosts list. The
      change to 5.0.0 made it so the ruserok call could not be made to check
      for user authorization.

5.0.1
  e - TRQ-2410. Improved qstat behavior in cases where bad job IDs were referenced
      in the command.
  e - TRQ-2460. Two new fields were added to the accounting file for completed jobs:
      total_execution_slots and unique_node_count. total_execution_slots should be
      20 for a job that requests nodes=2:ppn=10. unique_node_count should be the
      number of unique hosts the job occupied.
  e - TRQ-2594. TORQUE now uses the Munge API rather than forking when configured
      with the --enable-munge-auth option.
  e - TRQ-2863. Reduced verbosity in error logging in HA environments.
  e - TRQ-2868. TORQUE now allows for the modification of the output location
      based on the Mother superior hostname. An environment variable ($HOSTNAME)
      has been added to the job's environment.
  e - TRQ-2882. Improved trqauthd error messages to more meaningful and less
      redundant.
  e - TRQ-2890. Added stderr capturing when using -o option.
  b - TRQ-2025. Fixed bug where giving a bad queue name to qstat -Q results in
      duplicate output.
  b - TRQ-2292. Fixed bug where some tasks were incorrectly listed as 0 in 'qstat -a'
      when requesting specific nodes.
  b - TRQ-2367. Fixed bug related to accounting records on large systems.
  b - TRQ-2411. Fixed output format bug in cases where multiple job IDs are passed
      into qstat.