@@ -35,6 +35,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       (backported from 5.1.1)
   e - TRQ-3095. Add the server setting disable_automatic_requeue to stop jobs from being
       requeued if they experience a transient failure on the mom. (backported from 5.1.1)
+  e - TRQ-2307. Fix probelms where mom restarts intermittently fail. (backported from 5.1.1)
  
 
 5.0.1.h2
